--- a/style.css
+++ b/style.css
@@ -1,9 +1,23 @@
 .replacement {
-color:red;
+    color:red;
+    position: relative;
+    display: inline-block;
 
 }
-.replacement:hover { 
-    background-color: yellow;
-    text-transform: uppercase;
+.tooltiptext {
+    visibility: hidden;
+    width: 100px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 1;
+}
 
+.replacement:hover .tooltiptext {
+    visibility: visible; 
+    background-color: black;
+    text-transform: uppercase;
 }
