--- a/style.css
+++ b/style.css
@@ -21,3 +21,29 @@
     background-color: black;
     text-transform: uppercase;
 }
+#make_it_she_wrap{
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    z-index: 9999999999999999;
+}
+
+#make_it_she_wrap input#make_it_she {
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 18px;
+  background: #ff0080;
+  padding: 15px 20px 10px 20px;
+  text-decoration: none;
+  border: 0;
+  outline: 0;
+  cursor: pointer;
+}
+
+#make_it_she_wrap input#make_it_she:hover {
+  background: #DD0080;
+  text-decoration: none;
+}
