--- a/style.css
+++ b/style.css
@@ -1,9 +1,49 @@
 .replacement {
-color:red;
+    color:red;
+    position: relative;
+    display: inline-block;
 
 }
-.replacement:hover { 
-    background-color: yellow;
-    text-transform: uppercase;
+.tooltiptext {
+    visibility: hidden;
+    width: 100px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 1;
+}
 
+.replacement:hover .tooltiptext {
+    visibility: visible; 
+    background-color: black;
+    text-transform: uppercase;
+}
+#make_it_she_wrap{
+    position: fixed;
+    top: 70px;
+    right: 30px;
+    z-index: 9999999999999999;
+}
+
+#make_it_she_wrap input#make_it_she {
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 18px;
+  background: #ff0080;
+  padding: 15px 20px 10px 20px;
+  text-decoration: none;
+  border: 0;
+  outline: 0;
+  cursor: pointer;
+}
+
+#make_it_she_wrap input#make_it_she:hover {
+  background: #DD0080;
+  text-decoration: none;
 }
