Tooltip is in the correct case (no need to uppercase it always unless we want to) Regex is SLOW but correct with punctuation

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 .ignore-css.replacement:hover .tooltiptext {
     visibility: visible;
     background-color: black;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
 }
 .ignore-css#make_it_she_wrap{
     position: fixed;
